# desktop-app

./: README.md  index.html  package-lock.json  package.json  vite.config.js
src/: App.jsx  main.jsx  storage.jsx
src-tauri/: .gitignore  2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: ChangePassword.jsx  Customers.jsx  EditProductModal.jsx  Inventory.jsx  InventoryReport.jsx  InvoiceModal.jsx  Login.jsx  ProductList.jsx  Reports.jsx  Sales.jsx  Sidebar.jsx  Suppliers.jsx  System.jsx  TransactionLogs.jsx  UserManagement.jsx
src/services/: db.js
